buttons copy and tag are now  hidden

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -18,12 +18,12 @@
     <div class="action-buttons">
       <input type="radio" name="action" value="move" id="action-move" checked>
       <label for="action-move" data-l10n-id="actionMove"></label>
-      <input type="radio" name="action" value="copy" id="action-copy">
-      <label for="action-copy" data-l10n-id="actionCopy"></label>
+      <input type="radio" name="action" value="copy" id="action-copy" class="hidden">
+      <label for="action-copy" data-l10n-id="actionCopy" class="hidden"></label>
       <input type="radio" name="action" value="goto" id="action-goto">
       <label for="action-goto" data-l10n-id="actionGoto"></label>
-      <input type="radio" name="action" value="tag" id="action-tag">
-      <label for="action-tag" data-l10n-id="actionTag"></label>
+      <input type="radio" name="action" value="tag" id="action-tag" class="hidden">
+      <label for="action-tag" data-l10n-id="actionTag" class="hidden"></label>
     </div>
     <div id="meta-action-warning" class="warning hidden">
       <span data-l10n-id="metaActionWarning"></span>
