searchAccountName option added to the options page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -36,6 +36,10 @@
       <input type="checkbox" id="partialMatchFullPath">
       <label for="partialMatchFullPath" data-l10n-id="partialMatchFullPath"></label>
     </div>
+    <div class="preference">
+      <input type="checkbox" id="searchAccountName">
+      <label for="searchAccountName" data-l10n-id="searchAccountName"></label>
+    </div>
     <div class="preference" data-l10n-attr-title="useLegacyShortcutsTitle">
       <input type="checkbox" id="useLegacyShortcuts">
       <label for="useLegacyShortcuts" data-l10n-id="useLegacyShortcuts"></label>
