notificationActive option added

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -41,6 +41,10 @@
       <label for="useLegacyShortcuts" data-l10n-id="useLegacyShortcuts"></label>
     </div>
     <div class="preference">
+      <input type="checkbox" id="notificationActive">
+      <label for="notificationActive" data-l10n-id="notificationActive"></label>
+    </div>
+    <div class="preference">
       <span></span>
       <div>
         <button id="onboarding" data-l10n-id="showInstructions"></button>
