missing closing fieldset tag added

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -91,5 +91,6 @@
         <folder-list id="excluded-folder-picker" search="true" data-l10n-attr-placeholder="excludedFoldersSearchPlaceholder" popup="true"></folder-list>
       </div>
       <folder-list id="excluded-folders" readonly="true" delete="true"></folder-list>
+    </fieldset>
   </body>
 </html>
