options renamed. options managed in the options page

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -57,6 +57,27 @@
       </div>
     </div>
     <fieldset>
+      <legend data-l10n-id="operationMenuItemsTitle"></legend>
+      <div class="overflow">
+        <div class="preference">
+          <input type="checkbox" id="operationMenuItemsMove" class="menuItemAction">
+          <label for="actionMove" data-l10n-id="actionMove"></label>
+        </div>
+        <div class="preference">
+          <input type="checkbox" id="operationMenuItemsCopy" class="menuItemAction">
+          <label for="actionCopy" data-l10n-id="actionCopy"></label>
+        </div>
+        <div class="preference">
+          <input type="checkbox" id="operationMenuItemsGoto" class="menuItemAction">
+          <label for="actionGoto" data-l10n-id="actionGoto"></label>
+        </div>
+        <div class="preference">
+          <input type="checkbox" id="operationMenuItemsTag" class="menuItemAction">
+          <label for="actionTag" data-l10n-id="actionTag"></label>
+        </div>
+      </div>
+    </fieldset>
+    <fieldset>
       <legend data-l10n-id="defaultFoldersTitle"></legend>
       <div id="defaultFolderSetting" data-type="radio">
         <input type="radio" name="defaultFolderSetting" id="defaultFolderSettingRecent" value="recent">
