--- a/src/options/options.html
+++ b/src/options/options.html
@@ -59,24 +59,25 @@
     <fieldset class="operationMenuItemsFieldset">
       <legend data-l10n-id="operationMenuItemsTitle"></legend>
       <div>
-        <div class="menuItemActionDiv" data-l10n-id="menuItemActionInfo"></div>
-        <div class="menuItemActionDiv" data-l10n-id="menuItemActionWarning"></div>
-        <div class="menuItemActionDiv">&nbsp;</div>
-        <div class="preference menuItemActionDiv">
-          <input type="checkbox" id="operationMenuItemsMove" class="menuItemAction">
-          <label for="operationMenuItemsMove" data-l10n-id="actionMove"></label>
-        </div>
-        <div class="preference menuItemActionDiv">
-          <input type="checkbox" id="operationMenuItemsCopy" class="menuItemAction">
-          <label for="operationMenuItemsCopy" data-l10n-id="actionCopy"></label>
-        </div>
-        <div class="preference menuItemActionDiv">
-          <input type="checkbox" id="operationMenuItemsGoto" class="menuItemAction">
-          <label for="operationMenuItemsGoto" data-l10n-id="actionGoto"></label>
-        </div>
-        <div class="preference menuItemActionDiv">
-          <input type="checkbox" id="operationMenuItemsTag" class="menuItemAction">
-          <label for="operationMenuItemsTag" data-l10n-id="actionTag"></label>
+        <div class="menuItemActionDivText" data-l10n-id="menuItemActionInfo"></div>
+        <div class="menuItemActionDivText" data-l10n-id="menuItemActionWarning"></div>
+        <div class="menuItemActionDivGroup">
+          <div class="preference menuItemActionDiv">
+            <input type="checkbox" id="operationMenuItemsMove" class="menuItemAction">
+            <label for="operationMenuItemsMove" data-l10n-id="actionMove"></label>
+          </div>
+          <div class="preference menuItemActionDiv">
+            <input type="checkbox" id="operationMenuItemsCopy" class="menuItemAction">
+            <label for="operationMenuItemsCopy" data-l10n-id="actionCopy"></label>
+          </div>
+          <div class="preference menuItemActionDiv">
+            <input type="checkbox" id="operationMenuItemsGoto" class="menuItemAction">
+            <label for="operationMenuItemsGoto" data-l10n-id="actionGoto"></label>
+          </div>
+          <div class="preference menuItemActionDiv">
+            <input type="checkbox" id="operationMenuItemsTag" class="menuItemAction">
+            <label for="operationMenuItemsTag" data-l10n-id="actionTag"></label>
+          </div>
         </div>
       </div>
     </fieldset>
